WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
295015
REGRESSION(
295899@main
): Video as an image source does not display its frames
https://bugs.webkit.org/show_bug.cgi?id=295015
Summary
REGRESSION(295899@main): Video as an image source does not display its frames
Said Abou-Hallawa
Reported
2025-06-25 21:16:59 PDT
Created
attachment 475655
[details]
red-green-blue.mov Open the attached test case. Result: No video is displayed. Expected: The frames of the attached video are displayed. Note: The attached test case includes the attached video as an image source.
Attachments
red-green-blue.mov
(1.47 KB, video/quicktime)
2025-06-25 21:16 PDT
,
Said Abou-Hallawa
no flags
Details
test case
(132 bytes, text/html)
2025-06-25 21:21 PDT
,
Said Abou-Hallawa
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2025-06-25 21:21:14 PDT
Created
attachment 475656
[details]
test case
Radar WebKit Bug Importer
Comment 2
2025-06-25 21:22:34 PDT
<
rdar://problem/154358072
>
Said Abou-Hallawa
Comment 3
2025-06-25 21:39:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47221
EWS
Comment 4
2025-06-26 13:34:43 PDT
Committed
296680@main
(f5b453a8e09b): <
https://commits.webkit.org/296680@main
> Reviewed commits have been landed. Closing PR #47221 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug